# qnovnc-platform-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-rpm.sh  main.cpp  novnc.json  qnovnc.cpp  qnovnc_p.h  qnovncclient.cpp  qnovncclient.h  qnovncframecache.cpp  qnovncframecache.h  qnovncintegration.cpp  qnovncintegration.h  qnovncscreen.cpp  qnovncscreen.h  qnovncwindow.cpp  qnovncwindow.h  qt-novnc-platform-plugin.spec  qwebsocketdevice.h
scripts/: build-rpm-in-docker.sh
